tests/invalid/generic_instantiate_argument_count_mismatch.wio
@Export
@Instantiate(i32)
fn PickLeft<T, U>(left: T, right: U) -> T {
    return left;
}
